--- a/package.json
+++ b/package.json
@@ -8,12 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~42.0.1",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-picker/picker": "^1.16.6",
+    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "expo": "^42.0.3",
+    "expo-application": "^3.2.0",
+    "expo-auth-session": "~3.3.1",
+    "expo-google-app-auth": "^8.2.2",
+    "expo-random": "~11.2.0",
+    "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.9.2",
+    "react-native-phone-input": "^1.1.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
