--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-phone-input": "^1.1.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-skeleton-content": "^1.0.22",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4"
   },
