--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-application": "^3.2.0",
     "expo-auth-session": "~3.3.1",
     "expo-google-app-auth": "^8.2.2",
+    "expo-location": "~12.1.2",
     "expo-random": "~11.2.0",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "install": "^0.13.0",
+    "lodash.debounce": "^4.0.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
