--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-native-picker/picker": "^1.16.6",
+    "@react-native-picker/picker": "1.16.1",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
